k8s/bases/izelnakri-com/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: izelnakri-com-ingress
  namespace: izelnakri-com
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod-issuer
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - izelnakri.com
    secretName: letsencrypt-prod
  rules:
  - host: izelnakri.com
    http:
      paths:
      - backend:
          serviceName: izelnakri-com-service
          servicePort: 80
